--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -4,6 +4,7 @@ filter:
 before_commands:
     - 'composer install --dev --prefer-source'
 tools:
+    external_code_coverage: true
     php_mess_detector: true
     php_code_sniffer: true
     sensiolabs_security_checker: true
