--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,8 @@ before_script:
   - composer self-update
   - composer install --dev --no-interaction
 
-script: phpunit
+script: phpunit --coverage-clover=coverage.clover
+
+after_script:
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
