--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -23,6 +23,7 @@
 
     <logging>
         <log type="coverage-clover" target="./.coverage.xml" />
+        <log type="coverage-html" target="./.html" />
     </logging>
 
 </phpunit>
